--- a/template.local.env
+++ b/template.local.env
@@ -2,27 +2,27 @@
 export IC_API_KEY=YOUR_API_KEY
 
 # both iks_tf and vpc_nlb: --------------------------------------------
-"Resources created will be named: prefix-vpc or prefix-iks
-export TV_VAR_prefix              = "glbnlb"
+# Resources created will be named: prefix-vpc or prefix-iks
+export TF_VAR_prefix="glbnlb"
   
 # Resource group that will contain all the resources created, try: ibmcloud resource groups
-export TV_VAR_resource_group_name = "Default"
+export TF_VAR_resource_group_name="Default"
   
 # Region for all resources, try: ibmcloud is regions
-export TV_VAR_region              = "us-south"
+export TF_VAR_region="us-south"
   
 # IBM Cloud Internet Services name, try: ibmcloud cis instances
-export TV_VAR_cis_name            = "YOUR_CIS_NAME" # try: ibmcloud cis instances
+export TF_VAR_cis_name="YOUR_CIS_NAME"
   
 # IBM Cloud Internet Services domain name like example.com, try: ibmcloud cis domains
-export TV_VAR_domain_name         = "YOUR_DOMAIN_NAME" # example.com try: ibmcloud cis domains
+export TF_VAR_domain_name="YOUR_DOMAIN_NAME" # example.com try: ibmcloud cis domains
   
 # Number of zones to create
-export TV_VAR_zones               = 2
+export TF_VAR_zones=2
   
 # number of instances per zone connected to the NLB in the zone
-export TV_VAR_instances           = 2
+export TF_VAR_instances=2
 
 # required for vpc_nlb (not iks_tf): ----------------------------------------------
 # SSH keys are needed to connect to virtual instances. https://cloud.ibm.com/docs/vpc?topic=vpc-getting-started, try: ibmcloud is keys
-export TV_VAR_ssh_key_name        = "YOUR_SSH_KEY"
+export TF_VAR_ssh_key_name="YOUR_SSH_KEY"
